--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,4 @@ astro
 airflow-webserver.pid
 webserver_config.py
 airflow.cfg
-airflow.db
-include/gcp/service_account.json
+airflow.dservice_account.json
